--- a/style.css
+++ b/style.css
@@ -4,5 +4,18 @@
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   color: #2c3e50;
+  margin: auto;
   margin-top: 60px;
+  max-width: 600px;
+}
+
+.icon {
+  height: 1rem;
+  width: 1rem;
+  margin-right: 0.5rem;
+}
+
+.mainimg {
+  border-radius: 90%;
+  border: 5px solid #2c3e50;
 }
